# Sun-Valley-ttk-theme

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  sun-valley.tcl  sv.tcl  sv_ttk.py
.github/workflows/: generate_spritesheet.yml  pypi.yml  test.yml
nativesvttk/: __init__.py  messagebox.py  sv.tcl
nativesvttk/theme/: dark.tcl
src/: package-lock.json  package.json  spritesheet_generator.js
src/dark/: README.md
src/light/: README.md
sv_ttk/: __init__.py  sv.tcl
sv_ttk/theme/: dark.tcl  light.tcl  sprites_dark.tcl  sprites_light.tcl
tests/: conftest.py  test_sv_ttk.py
theme/: dark.tcl  light.tcl  sprites_dark.tcl  sprites_light.tcl
uploadtopypi/: TOKEN  upload.py
