# pyproject.toml for Flit

# Build system section (PEP 517 standard)
[build-system]
requires = ["flit_core >=3.2,<4"]  # Specify Flit as the build backend
build-backend = "flit_core.buildapi"

# Project metadata (PEP 621 standard)
[project]
name = "nativesvttk"  # Your package name on PyPI
version = "10.0"  # Version number
requires-python = ">=3.8"  # Required Python version
authors = [
    {name = "Johnny", email = "johnny@johnnytech.net"},
]  # List of authors

# Optional metadata fields
description = "Even more windows 11-like! With custom titlebars, Making themed apps is now so easy!"
readme = "README.md"  # Path to a longer description file (e.g., README.rst)
classifiers = [
    "License :: OSI Approved :: MIT License",
    # Add other classifiers as needed
]

